--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "portfinder": "^1.0.3",
     "shelljs": "^0.7.0",
     "swagger-repo": "^1.4.2",
-    "swagger-ui": "^3.9.2"
+    "swagger-ui-dist": "^3.9.2"
   },
   "private": true,
   "scripts": {
